2019-12-07  6.9.10-79 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-79, GIT revision 15...

2019-12-07  6.9.10-79 Cristy  <quetzlzacatenango@image...>
  * Build file clean-up (reference
    https://github.com/ImageMagick/ImageMagick/pull/1798).
  * Introduce HeapOverflowSanityCheckGetExtent() method (reference
    https://github.com/ImageMagick/ImageMagick/pull/1798).

2019-12-01  6.9.10-78 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-78, GIT revision 15097:0136438:20191207.

2019-12-01  6.9.10-78 Cristy  <quetzlzacatenango@image...>
  * -type bilevel behavior restored, it creates a black and white image.

2019-11-29  6.9.10-77 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-77, GIT revision 15087:5e6be1a:20191129.

2019-11-26  6.9.10-77 Cristy  <quetzlzacatenango@image...>
  * Support Pocketmod image format, e.g.
    convert -density 300 pages?.pdf pocketmod:organize.pdf
  * Fixed numerous issues  posted to GitHub (reference
    https://github.com/ImageMagick/ImageMagick/issues).
  * Update documentation.

    https://github.com/ImageMagick/ImageMagick/issues/1784).
2019-11-26  6.9.10-75 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-75, GIT revision 15062:f23c75e:20191126.

2019-11-19  6.9.10-75 Cristy  <quetzlzacatenango@image...>
  * Increase the maximum number of bezier coordinates (reference
    https://github.com/ImageMagick/ImageMagick/issues/1784).
  * Santize "'" from SHOW and WIN delegates under Linux, '"\' for Windows
    (thanks to Enzo Puig).
  * Correct for TGA orientation (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=34757).
  * The result for -compose Copy -extent on a CMYK image is CMYK (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37118).
  * Fix potential buffer overflow when reading a fax image (alert from
    Justin).
  * Support dng:use-camera-wb option.
